<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Task Manager</string>
    <string name="loading">Loading…</string>
    <string name="computing_size">Computing…</string>
    <string name="invalid_size_value">Unable to compute package size</string>
    <string name="kill">End</string>
    <string name="kill_all">End all</string>
    <string name="delete">Uninstall</string>
    <string name="cpu_help">The item is sorted by cpu usage rate</string>
    <string name="ram_help">This shows the size of memory used.</string>
    <string name="summary_help">The item is sorted by cpu usage rate</string>
    <string name="available_memory">Available memory</string>
    <string name="allocated_memory">Memory in use</string>
    <string name="total_used">Total</string>
    <string name="used_internal_memory">Program</string>
    <string name="total">Total</string>
    <string name="available">Available</string>
    <string name="used">Used</string>
    <string name="virutal_system">Android System</string>
    <string name="item_ram">RAM</string>
    <string name="item_cpu">CPU</string>
    <string name="item_process">Process</string>
    <string name="cpu_menu">CPU</string>
    <string name="running_pkg_menu">Active applications</string>
    <string name="data_menu">Package</string>
    <string name="etc_menu">Summary</string>
    <string name="summary_cpu">CPU</string>
    <string name="summary_memory">Random access memory(RAM)</string>
    <string name="summary_storage">Storage</string>
    <string name="summary_batt">Battery</string>
    <string name="clear_user_data">Clear user data</string>
    <string name="uninstall">Uninstall</string>
    <string name="total_running_apps_label">Process</string>
    <string name="total_running_services_label">Service</string>
    <string name="storage_data">Data</string>
    <string name="storage_system">System</string>
    <string name="detail">...</string>
    <string name="storage_data_label">Program</string>
    <string name="storage_dbdata_label">Personal data</string>
    <string name="storage_internal_sdcard_label">Internal SD card</string>
    <string name="storage_external_sdcard_label">External SD card</string>
    <string name="memory_available_label">Available</string>
    <string name="cpu_usage_label">Usage</string>
    <string name="sd_unavailable">Unavailable</string>
    <string name="help">Help</string>
    <string name="kill_all_notification">All active applications closed</string>
    <string name="help_menu">Help</string>
    <string name="total_running_tasks_label">Tasks</string>
    <string name="cpu">CPU</string>
    <string name="summary_running_apps">Active applications</string>
    <string name="summary_running_apps_title">Active applications: %d</string>
    <string name="summary_running_apps_title_wait">Active applications: please wait...</string>
    <string name="battery_monitor_service_started">Battery monitoring started</string>
    <string name="battery_monitor_service_label">Battery monitor</string>
    <string name="summary_monitoring">Battery monitor</string>
    <string name="start_monitoring_button">Start monitoring</string>
    <string name="stop_monitoring_button">Stop monitoring</string>
    <string name="sort">Sort</string>
    <string name="select_sort_method">Sort by</string>
    <string name="used_cpu">CPU usage</string>
    <string name="used_ram">RAM usage</string>
    <string name="sort_alphabet">Alphabets</string>
    <string name="empty_list_msg">You do not have any third-party apps installed</string>
    <string name="consuming_more">...</string>
    <string name="consuming_battery">Battery used by running applications</string>
    <string name="read_only">(Read-only)</string>
    <string name="pkg_size_help">Package size: code + data</string>
    <string name="summary_monitoring_sdcard_check">please, Chcek your sdcard.</string>
    <string name="summary_monitoring_description">- Developer Only -</string>
    <string name="sort_none">None</string>
    <string name="clear_memory_description">"Caution!

Clearing RAM would finish some of the running applications. Save data before you clear RAM"</string>
    <string name="level1_description">"Clear inactive processes.

Completed application functions will be removed from RAM"</string>
    <string name="level2_description">"Clear inactive and background processes.

Completed and ongoing background application functions will be removed from RAM"</string>
    <string name="level3_description">"Clear inactive, background, service and foreground processes.

Completed, currently running, and ongoing background application functions will be removed from RAM"</string>
    <string name="level1">Level 1</string>
    <string name="level1_2">Level 1+2</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="clear_memory_title">RAM management</string>
    <string name="clear_memory_button">Clear memory</string>
    <string name="ramuseage_menu">RAM manager</string>
    <string name="exit_notification">%d applications closed</string>
    <string name="batt_level_label">Level</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
</resources>
