<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.sec.android.app.controlpanel">
    <com.nemustech.tiffany.widget.TFScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/all_details" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:text="@string/summary_memory" style="?android:attr/listSeparatorTextViewStyle" />
            <LinearLayout android:orientation="vertical" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="15.0sp" android:textColor="@touchwiz:color/tw_color005" android:layout_gravity="bottom|right|center" android:id="@id/memory_available_text" android:paddingRight="13.329987dip" android:paddingBottom="4.669983dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" />
                <ProgressBar android:layout_gravity="center" android:id="@id/mem_percentage" android:paddingLeft="17.329987dip" android:paddingRight="17.329987dip" android:layout_width="fill_parent" android:layout_height="13.329987dip" android:max="100" android:progress="0" style="?android:attr/progressBarStyleHorizontal" />
            </LinearLayout>
            <TextView android:text="@string/clear_memory_title" style="?android:attr/listSeparatorTextViewStyle" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:id="@id/layout_clear_memory" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="true">
                    <LinearLayout android:orientation="horizontal" android:paddingLeft="17.329987dip" android:paddingTop="12.0dip" android:paddingRight="17.329987dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="true">
                        <LinearLayout android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.5" />
                        <TextView android:textSize="15.0sp" android:textColor="@touchwiz:color/tw_color005" android:layout_gravity="bottom" android:id="@id/clear_memory_level1_text" android:paddingBottom="4.669983dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/level1" android:maxLines="1" />
                        <LinearLayout android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.5" />
                        <TextView android:textSize="15.0sp" android:textColor="@touchwiz:color/tw_color005" android:layout_gravity="bottom" android:id="@id/clear_memory_level2_text" android:paddingBottom="4.669983dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/level1_2" android:maxLines="1" />
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="true">
                        <ProgressBar android:layout_gravity="center" android:id="@id/level_seekbar" android:paddingLeft="17.329987dip" android:paddingRight="17.329987dip" android:layout_width="fill_parent" android:layout_height="13.329987dip" android:max="2" android:progress="0" style="?android:attr/progressBarStyleHorizontal" />
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:paddingLeft="17.329987dip" android:paddingRight="17.329987dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="true">
                        <ToggleButton android:id="@id/clear_button_level1" android:layout_width="wrap_content" android:layout_height="50.0dip" android:textOn="@string/level1" android:textOff="@string/level1" />
                        <ToggleButton android:id="@id/clear_button_level2" android:layout_width="wrap_content" android:layout_height="50.0dip" android:textOn="@string/level2" android:textOff="@string/level2" />
                        <LinearLayout android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
                        <Button android:enabled="false" android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="right" android:id="@id/clear_button" android:layout_width="wrap_content" android:layout_height="50.0dip" android:text="@string/clear_memory_button" android:shadowDx="-1.0" android:shadowDy="-1.0" android:shadowRadius="0.4" />
                    </LinearLayout>
                </LinearLayout>
                <TextView android:textSize="17.5sp" android:textColor="?android:textColorSecondary" android:id="@id/clear_memory_description_label" android:paddingLeft="13.329987dip" android:paddingTop="13.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clear_memory_description" />
            </LinearLayout>
        </LinearLayout>
    </com.nemustech.tiffany.widget.TFScrollView>
</LinearLayout>
